# NEW-ERA

./: Dockerfile  README.md  _quick_check.py  _quick_check2.py  check_deps.py  check_env.py  pyproject.toml  quick_test.py  requirements.txt  run.py  run_train.py
.codebuddy/memory/: 2026-04-01.md  2026-04-09.md
configs/: base_config.yaml  deepspeed_config.json
src/: __init__.py
src/api/: __init__.py  server.py
src/data/: __init__.py  dataset.py  ecommerce_dataset.py  preprocessing.py  vector_store.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  copy_engine.py
src/models/: __init__.py  copy_generator.py  fusion.py  multimodal_model.py  optimization.py  text_encoder.py  vision_encoder.py
src/rl/: __init__.py  dpo_trainer.py  multi_agent.py  ppo_trainer.py  reward_model.py
src/training/: __init__.py  pipeline.py  sft_trainer.py
src/utils/: __init__.py  config.py
tests/: test_api.py  test_data.py  test_evaluation.py  test_integration.py  test_models.py  test_rl.py  test_utils.py
