[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmrl-content-system"
version = "1.0.0"
description = "基于多模态决策强化学习的智能内容生成与推荐系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
